--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-DBUSER = test
-DBPASSWORD = password
+DBUSER = testJunRu
+DBPASSWORD = JunRuTest
 DBHOST = 127.0.0.1
 DBPORT = 8974
-DBNAME = name
+DBNAME = test
 PORT = 2083
 LogPath = logs
 assetsPath = /assets
